...
        super.viewDidLoad()

        savedTaskList = taskManager.retrieveTasks()
       
        let serialNumber = UserDefaults.standard.value(forKey: "Serial nummber")
        
        let alertView = UIAlertController(title: "value from user defaults",
                                          message: serialNumber as? String,
                                          preferredStyle: .alert)
        alertView.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        
        self.present(alertView, animated: true, completion: nil)
        
        // Uncomment the following line to preserve selection between presentations
        // self.clearsSelectionOnViewWillAppear = false

...
